test: 💍 add tests for long term page

--- a/apps/frontend/src/app/pages/longterm/createLongTermDialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/createLongTermDialog/create-long-term-dialog.component.html
@@ -2,6 +2,7 @@
   [formGroup]="createLongTermForm"
   (ngSubmit)="onSubmit()"
   class="dialog-container"
+  data-cy="long-term-create-dialog"
 >
   <h1>Add long term</h1>
   <hr />
