--- a/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.html
@@ -8,7 +8,7 @@
 
   <div class="dialog-row"></div>
 
-  <mat-form-field appearance="fill" autocomplete="off" class="full-width">
+  <mat-form-field appearance="fill" autocomplete="off" class="full-width no-margin">
     <mat-label>Title</mat-label>
     <input
       #title
@@ -17,17 +17,9 @@
       matInput
       placeholder="Document title"
     />
-    <mat-error
-      *ngIf="
-        createDocumentForm.get('title')?.invalid &&
-        createDocumentForm.get('title')?.dirty
-      "
-    >
-      Required
-    </mat-error>
   </mat-form-field>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+  <mat-form-field autocomplete="off" appearance="fill" class="full-width no-margin">
     <mat-label>Comments</mat-label>
     <textarea
       #comments
@@ -37,19 +29,14 @@
       formControlName="comments"
       placeholder="Describe the document"
     ></textarea>
-    <mat-error
-      *ngIf="
-        createDocumentForm.get('comments')?.invalid &&
-        createDocumentForm.get('comments')?.dirty
-      "
-    >
-      Can't be more than 1000 characters
-    </mat-error>
   </mat-form-field>
 
-  <button class="document-btn full-width" mat-raised-button type="button" *ngIf="uploadedFile">
-    {{ showDocument(uploadedFile.name) }}
-  </button>
+  <div class="document-container" *ngIf="uploadedFile">
+    <button class="document-btn full-width" mat-raised-button type="button">
+      {{ showDocument(uploadedFile.name) }}
+    </button>
+    <button class="secondary-btn remove-btn" mat-raised-button type="button" (click)="uploadedFile = undefined">X</button>
+  </div>
 
   <input
     style="display: none"
