feat: 🎸 create update dialog for document and fix formatting

--- a/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.scss
+++ b/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.scss
@@ -6,15 +6,14 @@
   font-weight: 900;
 }
 
-.full-width, .remove-btn {
+.full-width,
+.remove-btn {
   margin-bottom: 1em;
 
   &.no-margin {
     margin-bottom: 0;
   }
 }
-
-
 
 .document-container {
   display: flex;
