--- a/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.html
@@ -8,7 +8,11 @@
 
   <div class="dialog-row"></div>
 
-  <mat-form-field appearance="fill" autocomplete="off" class="full-width no-margin">
+  <mat-form-field
+    appearance="fill"
+    autocomplete="off"
+    class="full-width no-margin"
+  >
     <mat-label>Title</mat-label>
     <input
       #title
@@ -19,7 +23,11 @@
     />
   </mat-form-field>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width no-margin">
+  <mat-form-field
+    autocomplete="off"
+    appearance="fill"
+    class="full-width no-margin"
+  >
     <mat-label>Comments</mat-label>
     <textarea
       #comments
@@ -35,7 +43,14 @@
     <button class="document-btn full-width" mat-raised-button type="button">
       {{ showDocument(uploadedFile.name) }}
     </button>
-    <button class="secondary-btn remove-btn" mat-raised-button type="button" (click)="uploadedFile = undefined">X</button>
+    <button
+      class="secondary-btn remove-btn"
+      mat-raised-button
+      type="button"
+      (click)="uploadedFile = undefined"
+    >
+      X
+    </button>
   </div>
 
   <input
