--- a/apps/frontend/src/app/components/documentWidget/document-widget.component.html
+++ b/apps/frontend/src/app/components/documentWidget/document-widget.component.html
@@ -12,7 +12,7 @@
   </div>
 
   <div class="action-bar-container">
-    <button mat-raised-button class="secondary-btn">Edit</button>
+    <button mat-raised-button class="secondary-btn" (click)="updateDocumentDialog()">Edit</button>
     <button
       mat-raised-button
       class="action-btn"
