feat: 🎸 show document in update dialog

--- a/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.html
@@ -40,8 +40,13 @@
   </mat-form-field>
 
   <div class="document-container" *ngIf="uploadedFile">
-    <button class="document-btn full-width" mat-raised-button type="button">
-      {{ showDocument(uploadedFile.name) }}
+    <button
+      class="document-btn full-width"
+      mat-raised-button
+      type="button"
+      disabled="true"
+    >
+      {{ getDocumentName(uploadedFile.name) }}
     </button>
     <button
       class="secondary-btn remove-btn"
