--- a/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.scss
+++ b/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.scss
@@ -1,9 +1,12 @@
 .document-btn {
-  border: 2px solid var(--main-blue);
-  border-radius: 5px;
-  color: var(--main-blue);
-  box-shadow: none;
-  font-weight: 900;
+  &:disabled {
+    border: 2px solid var(--main-blue);
+    border-radius: 5px;
+    color: var(--main-blue);
+    box-shadow: none;
+    font-weight: 900;
+    background-color: white;
+  }
 }
 
 .full-width,
