feat: 🎸 add delete button

--- a/apps/frontend/src/app/pages/documents/updateDocumentDialog/update-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/updateDocumentDialog/update-document-dialog.component.html
@@ -85,7 +85,7 @@
     <span class="checkmark"></span>
   </label>
 
-  <div class="dialog-row">
+  <div class="special-row actions-section">
     <button
       class="secondary-btn"
       mat-raised-button
@@ -93,6 +93,13 @@
       type="button"
     >
       Cancel
+    </button>
+    <button
+      class="danger-btn"
+      mat-raised-button
+      type="button"
+    >
+      Delete
     </button>
     <button class="action-btn" mat-raised-button type="submit">
       Update document
