--- a/apps/frontend/src/assets/styles/dialog.scss
+++ b/apps/frontend/src/assets/styles/dialog.scss
@@ -43,3 +43,16 @@ h1 {
     margin-top: 1.25em;
   }
 }
+
+.special-row {
+    display: flex;
+    
+    button {
+      flex-grow: 1;
+      margin-right: 1em;
+
+      &:last-of-type {
+        margin-right: 0;
+      }
+    }
+}
