--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -5,7 +5,7 @@
 
   /* Colors */
   --extra-light-grey: #f1f1f1;
-
+  --danger-red: #F34D4D;
   --main-blue: #2f2fa2;
   --main-blue-low-opacity: rgba(47, 47, 162, 0.4);
   --main-blue-lower-opacity: rgba(47, 47, 162, 0.2);
@@ -43,6 +43,11 @@ button {
 .action-btn {
   color: white;
   background: var(--action-gradient);
+}
+
+.danger-btn {
+  color: white;
+  background-color: var(--danger-red);
 }
 
 .secondary-btn {
