--- a/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.html
@@ -39,41 +39,52 @@
     ></textarea>
   </mat-form-field>
 
-  <div class="document-container" *ngIf="uploadedFile">
+  <div class="document-container">
+    <input
+      style="display: none"
+      #fileUpload
+      type="file"
+      multiple
+      (change)="uploadDocument($event)"
+      accept="application/pdf, application/msword, application/vnd.openxmlformats"
+    />
     <button
       class="document-btn full-width"
       mat-raised-button
       type="button"
-      disabled="true"
+      [disabled]="uploadedFile !== undefined"
+      (click)="fileUpload.click()"
     >
-      {{ getDocumentName(uploadedFile.name) }}
+      {{
+        uploadedFile === undefined
+          ? 'No file uploaded'
+          : getDocumentName(uploadedFile.name)
+      }}
     </button>
+
     <button
       class="secondary-btn remove-btn"
       mat-raised-button
       type="button"
       (click)="uploadedFile = undefined"
+      *ngIf="uploadedFile !== undefined"
     >
       X
     </button>
+    <button
+      class="secondary-btn remove-btn"
+      mat-raised-button
+      type="button"
+      (click)="fileUpload.click()"
+      *ngIf="uploadedFile === undefined"
+    >
+      <img
+        src="assets/icons/upload-white-icon.svg"
+        alt="upload icon"
+        class="icon"
+      />
+    </button>
   </div>
-
-  <input
-    style="display: none"
-    #fileUpload
-    type="file"
-    multiple
-    (change)="uploadDocument($event)"
-    accept="application/pdf, application/msword, application/vnd.openxmlformats"
-  />
-  <button
-    class="secondary-btn full-width"
-    mat-raised-button
-    type="button"
-    (click)="fileUpload.click()"
-  >
-    Upload file
-  </button>
 
   <label class="checkbox-container">
     Show on dashboard
