--- a/apps/frontend/src/app/components/documentWidget/document-widget.component.scss
+++ b/apps/frontend/src/app/components/documentWidget/document-widget.component.scss
@@ -10,8 +10,37 @@
   height: calc(100% - 2em);
   width: calc(100% - 2em);
 
+  .title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .show-on-dashboard {
+      display: flex;
+      align-items: center;
+      position: relative;
+      right: 0;
+      border-radius: 5px;
+      background-color: white;
+      padding: 3px 10px;
+      color: var(--main-blue);
+      border: 1px solid var(--main-blue);
+
+      mat-icon {
+        height: 15px;
+        width: 15px;
+        padding-left: 5px;
+
+        &.material-icons {
+          font-size: 15px;
+        }
+      }
+    }
+  }
+
   h2 {
     margin: 0;
+    max-width: 70%;
   }
 
   .text-container {
