--- a/apps/frontend/src/app/components/documentWidget/document-widget.component.scss
+++ b/apps/frontend/src/app/components/documentWidget/document-widget.component.scss
@@ -79,7 +79,14 @@
     width: 100%;
 
     mat-icon {
+      height: 20px;
+      width: 20px;
       padding-left: 8px;
+      padding-bottom: 3px;
+
+      &.material-icons {
+        font-size: 20px;
+      }
     }
   }
 }
