Remove angular date time picker dep

--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -192,14 +192,15 @@
           appearance="fill"
           class="remove-error-message"
         >
-          <mat-label>Display Date</mat-label>
+          <!-- <mat-label>Display Date</mat-label>
           <input
             matInput
             [ngxMatDatetimePicker]="displayDatePicker"
             placeholder="dd/MM"
             [(ngModel)]="displayDate"
             (dateChange)="onDisplayDateChange()"
-          />
+          /> -->
+          <input type="date" [(ngModel)]="displayDate">
           <mat-datepicker-toggle
             matSuffix
             [for]="$any(displayDatePicker)"
