feat: 🎸 Add documents to dashboard :D

--- a/apps/frontend/src/app/components/documentWidget/document-widget.component.scss
+++ b/apps/frontend/src/app/components/documentWidget/document-widget.component.scss
@@ -6,7 +6,8 @@
   row-gap: 3px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  padding: 0.5em 1em 1em 1em;
+  padding: 0.75em;
+  padding-top: 0.5em;
   height: calc(100% - 2em);
   width: calc(100% - 2em);
 
