--- a/apps/frontend/src/app/components/dashboard-document-section/dashboard-document-section.component.scss
+++ b/apps/frontend/src/app/components/dashboard-document-section/dashboard-document-section.component.scss
@@ -4,18 +4,38 @@ hr {
   margin-top: 0;
 }
 
-h1 {
+h1,
+h2 {
   margin-bottom: 0;
 }
 
 .document-container {
-    width: 100%;
-    display: flex;
-    overflow: scroll;
-    overflow-y: hidden;
+  width: 100%;
+  display: flex;
+  overflow: scroll;
+  overflow-y: hidden;
+  gap: 1em;
+  padding-bottom: 0.5em;
 }
 
 .dashboard-document {
-    width: 400px;
-    min-width: 400px;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  width: 320px;
+  min-width: 320px;
+  padding: 5px 10px;
+  border: var(--border);
+  border-radius: 5px;
+}
+
+mat-icon {
+  height: 20px;
+  width: 20px;
+  padding-left: 8px;
+  padding-bottom: 3px;
+
+  &.material-icons {
+    font-size: 20px;
+  }
 }
