--- a/apps/frontend/src/assets/styles/table.scss
+++ b/apps/frontend/src/assets/styles/table.scss
@@ -8,6 +8,10 @@ table {
   overflow: auto;
 }
 
+.comments-field {
+  padding: 10px !important;
+}
+
 .table-actions {
   display: flex;
   flex-grow: 1;
