--- a/apps/frontend/src/app/pages/assignments/assignments.component.html
+++ b/apps/frontend/src/app/pages/assignments/assignments.component.html
@@ -27,7 +27,7 @@
       </ng-container>
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td mat-cell *matCellDef="let item">
+        <td mat-cell *matCellDef="let item" class="comments-field">
           {{ item.comments ? item.comments : '-' }}
         </td>
       </ng-container>
