--- a/apps/frontend/src/app/pages/cars/cars.component.html
+++ b/apps/frontend/src/app/pages/cars/cars.component.html
@@ -2,6 +2,20 @@
   <div class="table-actions">
     <div>
       <mat-form-field
+        appearance="fill"
+        style="width: 150px"
+        class="remove-error-message"
+      >
+        <mat-label>Sort By</mat-label>
+        <mat-select [(value)]="sortBy" (selectionChange)="fetchCarList()">
+          <mat-option value="createdAt">Created at</mat-option>
+          <mat-option value="expirationDate">Expiration date</mat-option>
+          <mat-option value="deliveryTime">Delivery time</mat-option>
+          <mat-option value="pickUpTime">Pick up time</mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field
         autocomplete="off"
         class="remove-error-message"
         appearance="fill"
@@ -15,20 +29,6 @@
           (change)="fetchCarList()"
           matInput
         />
-      </mat-form-field>
-
-      <mat-form-field
-        appearance="fill"
-        style="width: 150px"
-        class="remove-error-message"
-      >
-        <mat-label>Sort By</mat-label>
-        <mat-select [(value)]="sortBy" (selectionChange)="fetchCarList()">
-          <mat-option value="createdAt">Created at</mat-option>
-          <mat-option value="expirationDate">Expiration date</mat-option>
-          <mat-option value="deliveryTime">Delivery time</mat-option>
-          <mat-option value="pickUpTime">Pick up time</mat-option>
-        </mat-select>
       </mat-form-field>
     </div>
 
@@ -230,6 +230,7 @@
           mat-cell
           *matCellDef="let element"
           (click)="openDialogEdit(element)"
+          class="comments-field"
         >
           {{ element.comments }}
         </td>
