--- a/apps/frontend/src/app/pages/checkin/checkin.component.html
+++ b/apps/frontend/src/app/pages/checkin/checkin.component.html
@@ -2,17 +2,6 @@
 <main>
   <div class="table-actions">
     <div>
-      <mat-form-field appearance="fill" class="remove-error-message">
-        <mat-label>Search</mat-label>
-        <input
-          type="text"
-          aria-label="search"
-          [(ngModel)]="search"
-          placeholder="Search ..."
-          (change)="fetchLuggage()"
-          matInput
-        />
-      </mat-form-field>
       <mat-form-field
         autocomplete="off"
         appearance="fill"
@@ -27,6 +16,18 @@
           <mat-option value="room">Room nr.</mat-option>
           <mat-option value="name">Name</mat-option>
         </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill" class="remove-error-message">
+        <mat-label>Search</mat-label>
+        <input
+          type="text"
+          aria-label="search"
+          [(ngModel)]="search"
+          placeholder="Search ..."
+          (change)="fetchLuggage()"
+          matInput
+        />
       </mat-form-field>
     </div>
 
@@ -98,7 +99,7 @@
       </ng-container>
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td mat-cell *matCellDef="let item">
+        <td mat-cell *matCellDef="let item" class="comments-field">
           {{ item.comments ? item.comments : '-' }}
         </td>
       </ng-container>
