--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -78,7 +78,7 @@
 
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td mat-cell *matCellDef="let luggage">
+        <td mat-cell *matCellDef="let luggage" class="comments-field">
           {{ luggage.comments ?? '-' }}
         </td>
       </ng-container>
