--- a/apps/frontend/src/app/pages/tasks/tasks.component.html
+++ b/apps/frontend/src/app/pages/tasks/tasks.component.html
@@ -16,7 +16,7 @@
     </ng-container>
     <ng-container matColumnDef="task">
       <th mat-header-cell *matHeaderCellDef>Task</th>
-      <td class="tasks-text" mat-cell *matCellDef="let task">
+      <td class="tasks-text comments-field" mat-cell *matCellDef="let task">
         {{ task.task }}
       </td>
     </ng-container>
@@ -77,7 +77,7 @@
     </ng-container>
     <ng-container matColumnDef="task">
       <th mat-header-cell *matHeaderCellDef>Task</th>
-      <td class="tasks-text" mat-cell *matCellDef="let item">
+      <td class="tasks-text comments-field" mat-cell *matCellDef="let item">
         {{ item.task }}
       </td>
     </ng-container>
