--- a/apps/frontend/src/app/pages/tasks/tasks.component.html
+++ b/apps/frontend/src/app/pages/tasks/tasks.component.html
@@ -11,8 +11,8 @@
 
   <table mat-table [dataSource]="morningTasks">
     <ng-container matColumnDef="time">
-      <th mat-header-cell *matHeaderCellDef style="width: 110px">Time</th>
-      <td mat-cell *matCellDef="let task">{{ task.time }}</td>
+      <th mat-header-cell *matHeaderCellDef>Time</th>
+      <td mat-cell *matCellDef="let task" class="small-field">{{ task.time }}</td>
     </ng-container>
     <ng-container matColumnDef="task">
       <th mat-header-cell *matHeaderCellDef>Task</th>
@@ -22,13 +22,13 @@
     </ng-container>
     <ng-container matColumnDef="done">
       <th mat-header-cell *matHeaderCellDef>Done</th>
-      <td mat-cell *matCellDef="let task">
+      <td mat-cell *matCellDef="let task" class="small-field">
         {{ task.completedAt ? (task.completedAt | date : 'HH:mm') : '-' }}
       </td>
     </ng-container>
     <ng-container matColumnDef="initials">
       <th mat-header-cell *matHeaderCellDef>Initials</th>
-      <td mat-cell *matCellDef="let task">
+      <td mat-cell *matCellDef="let task" class="small-field">
         {{ task.initials ? task.initials : '-' }}
       </td>
     </ng-container>
@@ -72,8 +72,8 @@
 
   <table mat-table [dataSource]="eveningTasks">
     <ng-container matColumnDef="time">
-      <th mat-header-cell *matHeaderCellDef style="width: 110px">Time</th>
-      <td mat-cell *matCellDef="let item">{{ item.time }}</td>
+      <th mat-header-cell *matHeaderCellDef>Time</th>
+      <td mat-cell *matCellDef="let item" class="small-field">{{ item.time }}</td>
     </ng-container>
     <ng-container matColumnDef="task">
       <th mat-header-cell *matHeaderCellDef>Task</th>
@@ -83,13 +83,13 @@
     </ng-container>
     <ng-container matColumnDef="done">
       <th mat-header-cell *matHeaderCellDef>Done</th>
-      <td mat-cell *matCellDef="let item">
+      <td mat-cell *matCellDef="let item" class="small-field">
         {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '-' }}
       </td>
     </ng-container>
     <ng-container matColumnDef="initials">
       <th mat-header-cell *matHeaderCellDef>Initials</th>
-      <td mat-cell *matCellDef="let item">
+      <td mat-cell *matCellDef="let item" class="small-field">
         {{ item.initials ? item.initials : '-' }}
       </td>
     </ng-container>
