--- a/apps/frontend/src/assets/styles/table.scss
+++ b/apps/frontend/src/assets/styles/table.scss
@@ -12,6 +12,10 @@ table {
   padding: 10px !important;
 }
 
+.small-field {
+  width: 50px;
+}
+
 .table-actions {
   display: flex;
   flex-grow: 1;
