feat: 🎸 add spinners when creating and updating docs

--- a/apps/frontend/src/app/components/documentWidget/document-widget.component.html
+++ b/apps/frontend/src/app/components/documentWidget/document-widget.component.html
@@ -22,7 +22,7 @@
       class="secondary-btn"
       (click)="updateDocumentDialog()"
     >
-      Edit
+      Edit <mat-icon>https</mat-icon>
     </button>
     <button
       mat-raised-button
