--- a/apps/frontend/src/app/pages/documents/documents.component.html
+++ b/apps/frontend/src/app/pages/documents/documents.component.html
@@ -34,7 +34,7 @@
       class="action-btn"
       (click)="openCreateDocumentDialog()"
     >
-      Add document
+      Add document <mat-icon>https</mat-icon>
     </button>
   </div>
   <hr />
