--- a/apps/frontend/src/app/components/documentWidget/document-widget.component.scss
+++ b/apps/frontend/src/app/components/documentWidget/document-widget.component.scss
@@ -26,11 +26,13 @@
       padding: 3px 10px;
       color: var(--main-blue);
       border: 1px solid var(--main-blue);
+      margin-bottom: 5px;
 
       mat-icon {
         height: 15px;
         width: 15px;
         padding-left: 5px;
+        padding-top: 3px;
 
         &.material-icons {
           font-size: 15px;
@@ -78,16 +80,16 @@
     justify-content: flex-end;
     column-gap: 10px;
     width: 100%;
+  }
+}
 
-    mat-icon {
-      height: 20px;
-      width: 20px;
-      padding-left: 8px;
-      padding-bottom: 3px;
+mat-icon {
+  height: 20px;
+  width: 20px;
+  padding-left: 8px;
+  padding-bottom: 3px;
 
-      &.material-icons {
-        font-size: 20px;
-      }
-    }
+  &.material-icons {
+    font-size: 20px;
   }
 }
