--- a/apps/frontend/src/app/components/documentWidget/seeDocumentDialog/see-document-dialog.component.scss
+++ b/apps/frontend/src/app/components/documentWidget/seeDocumentDialog/see-document-dialog.component.scss
@@ -9,7 +9,7 @@
     font-weight: 900;
     white-space: nowrap;
     text-overflow: ellipsis;
-    width: 100%;
+    margin: 0 0 0.5em 0.5em;
 
     h2 {
       margin-bottom: 0;
@@ -27,4 +27,8 @@
     justify-content: center;
     align-items: center;
   }
+}
+
+::ng-deep .mat-dialog-container {
+  padding: 10px;
 }
