--- a/apps/frontend/src/assets/styles/table.scss
+++ b/apps/frontend/src/assets/styles/table.scss
@@ -117,3 +117,14 @@ td.mat-cell {
     background-color: var(--main-blue);
   }
 }
+
+mat-icon {
+  height: 20px;
+  width: 20px;
+  padding-left: 8px;
+  padding-bottom: 3px;
+
+  &.material-icons {
+    font-size: 20px;
+  }
+}
