--- a/apps/frontend/src/app/pages/documents/updateDocumentDialog/update-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/updateDocumentDialog/update-document-dialog.component.html
@@ -53,29 +53,18 @@
       class="document-btn full-width"
       mat-raised-button
       type="button"
-      (click)="fileUpload.click()"
+      (click)="areYouSure()"
     >
       {{
         getDocumentName()
       }}
     </button>
 
-    <!-- Remove file btn / Upload file btn -->
     <button
       class="secondary-btn remove-btn"
       mat-raised-button
       type="button"
-      (click)="removeFile()"
-      *ngIf="!documentHasChanged"
-    >
-      X
-    </button>
-    <button
-      class="secondary-btn remove-btn"
-      mat-raised-button
-      type="button"
-      (click)="fileUpload.click()"
-      *ngIf="documentHasChanged"
+      (click)="areYouSure()"
     >
       <img
         src="assets/icons/upload-white-icon.svg"
