--- a/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.html
@@ -108,7 +108,9 @@
     <button class="action-btn" mat-raised-button type="submit">
       <div *ngIf="!isLoading">Add document</div>
       <div *ngIf="isLoading" class="btn-spinner">
-        <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
+        <mat-icon
+          ><mat-spinner diameter="21" color="white"></mat-spinner
+        ></mat-icon>
       </div>
     </button>
   </div>
