--- a/apps/frontend/src/app/pages/documents/updateDocumentDialog/update-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/updateDocumentDialog/update-document-dialog.component.html
@@ -55,9 +55,7 @@
       type="button"
       (click)="areYouSure()"
     >
-      {{
-        getDocumentName()
-      }}
+      {{ getDocumentName() }}
     </button>
 
     <button
@@ -104,7 +102,9 @@
     <button class="action-btn" mat-raised-button type="submit">
       <div *ngIf="!isLoading">Update document</div>
       <div *ngIf="isLoading" class="btn-spinner">
-        <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
+        <mat-icon
+          ><mat-spinner diameter="21" color="white"></mat-spinner
+        ></mat-icon>
       </div>
     </button>
   </div>
