--- a/apps/frontend/src/assets/styles/dialog.scss
+++ b/apps/frontend/src/assets/styles/dialog.scss
@@ -45,16 +45,16 @@ h1 {
 }
 
 .special-row {
-    display: flex;
-    
-    button {
-      flex-grow: 1;
-      margin-right: 1em;
+  display: flex;
 
-      &:last-of-type {
-        margin-right: 0;
-      }
+  button {
+    flex-grow: 1;
+    margin-right: 1em;
+
+    &:last-of-type {
+      margin-right: 0;
     }
+  }
 }
 
 .btn-spinner {
@@ -63,6 +63,7 @@ h1 {
   justify-content: center;
 }
 
-::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
+::ng-deep .mat-progress-spinner circle,
+.mat-spinner circle {
   stroke: white;
 }
