--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -8,7 +8,7 @@
 
   /* Colors */
   --extra-light-grey: #f1f1f1;
-  --danger-red: #F34D4D;
+  --danger-red: #f34d4d;
   --main-blue: #2f2fa2;
   --main-blue-low-opacity: rgba(47, 47, 162, 0.4);
   --main-blue-lower-opacity: rgba(47, 47, 162, 0.2);
