--- a/apps/frontend/src/app/pages/cars/createCarEntryDialog/create-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/createCarEntryDialog/create-car-dialog.component.html
@@ -46,7 +46,8 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="arrivalDate">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Arrival Date</mat-label>
       <input
         #arrivalDate
@@ -74,9 +75,10 @@
       >
         Required
       </mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="departureDate">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Departure Date</mat-label>
       <input
         #departureDate
@@ -104,7 +106,7 @@
       >
         Required
       </mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
   <div class="dialog-row">
@@ -147,7 +149,8 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="expirationDate">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Expiration Date</mat-label>
       <input
         #expirationDate
@@ -176,9 +179,10 @@
       >
         Required
       </mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="pickupTime">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Pick Up Time</mat-label>
       <input
         matInput
@@ -206,7 +210,7 @@
       >
         Required
       </mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
   <div class="dialog-row">
