--- a/apps/frontend/src/app/pages/cars/updateCarEntryDialog/update-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/updateCarEntryDialog/update-car-dialog.component.html
@@ -46,7 +46,8 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="arrivalDate">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Arrival date</mat-label>
       <input
         #arrivalDate
@@ -74,9 +75,10 @@
       >
         Required
       </mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="departureDate">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Departure date</mat-label>
       <input
         #departureDate
@@ -104,7 +106,7 @@
       >
         Required
       </mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
   <mat-form-field autocomplete="off" appearance="fill" class="full-width">
@@ -145,7 +147,8 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="expirationDate">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Expiration date</mat-label>
       <input
         #expirationDate
@@ -174,11 +177,13 @@
       >
         Required
       </mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
+  
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="pickUpTime">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Pick up time</mat-label>
       <input
         matInput
@@ -206,9 +211,10 @@
       >
         Required
       </mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="deliveryTime">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Delivery time</mat-label>
       <input
         matInput
@@ -236,7 +242,7 @@
       >
         Required
       </mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
   <div class="dialog-row">
