--- a/apps/frontend/src/app/pages/checkout/updateCheckoutDialog/update-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/updateCheckoutDialog/update-checkout-dialog.component.html
@@ -159,7 +159,8 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="completedAt">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Out time</mat-label>
       <input
         matInput
@@ -178,7 +179,7 @@
         [touchUi]="true"
       >
       </ngx-mat-datetime-picker>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
   <mat-form-field autocomplete="off" appearance="fill" class="full-width">
