--- a/apps/frontend/src/app/pages/longterm/updateLongTermDialog/update-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/updateLongTermDialog/update-long-term-dialog.component.html
@@ -97,7 +97,8 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="dateNeeded">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Date needed</mat-label>
       <input
         matInput
@@ -116,7 +117,7 @@
         [touchUi]="true"
       >
       </ngx-mat-datetime-picker>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
   <div class="dialog-row">
@@ -187,7 +188,8 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="dateOut">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Date out</mat-label>
       <input
         matInput
@@ -207,7 +209,7 @@
         [touchUi]="true"
       >
       </ngx-mat-datetime-picker>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
   <mat-form-field appearance="fill" class="full-width">
