--- a/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
@@ -108,7 +108,8 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="receivedAt">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Time received</mat-label>
       <input
         matInput
@@ -128,9 +129,10 @@
         [touchUi]="true"
       >
       </ngx-mat-datetime-picker>
-    </mat-form-field>
+    </mat-form-field> -->
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="receivedAt">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Time performed</mat-label>
       <input
         matInput
@@ -158,7 +160,7 @@
       >
         Invalid time
       </mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
   <div class="dialog-row">
