--- a/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
@@ -26,7 +26,8 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="arrivalTime">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Time of arrival</mat-label>
       <input
         matInput
@@ -45,7 +46,7 @@
         [touchUi]="true"
       >
       </ngx-mat-datetime-picker>
-    </mat-form-field>
+    </mat-form-field> -->
 
     <!-- <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Room status</mat-label>
@@ -171,7 +172,8 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="completedAt">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>In room time</mat-label>
       <input
         matInput
@@ -190,7 +192,7 @@
         [touchUi]="true"
       >
       </ngx-mat-datetime-picker>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
   <mat-form-field autocomplete="off" class="full-width" appearance="fill">
