--- a/apps/frontend/src/app/pages/longterm/createLongTermDialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/createLongTermDialog/create-long-term-dialog.component.html
@@ -27,7 +27,8 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field appearance="fill">
+    <input type="date" formControlName="arrivalTime">
+    <!-- <mat-form-field appearance="fill"> REMOVE
       <mat-label>Date in</mat-label>
       <input
         matInput
@@ -46,7 +47,7 @@
         [touchUi]="true"
       >
       </ngx-mat-datetime-picker>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
   <div class="dialog-row">
@@ -117,7 +118,8 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="dateNeeded">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Date needed</mat-label>
       <input
         matInput
@@ -136,7 +138,7 @@
         [touchUi]="true"
       >
       </ngx-mat-datetime-picker>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
   <div class="dialog-row">
