--- a/apps/frontend/src/app/pages/tasks/editTaskDialog/editTaskDialog.component.html
+++ b/apps/frontend/src/app/pages/tasks/editTaskDialog/editTaskDialog.component.html
@@ -18,7 +18,8 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <input type="date" formControlName="completedAt">
+    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
       <mat-label>Completed At</mat-label>
       <input
         matInput
@@ -37,7 +38,7 @@
         [touchUi]="true"
       >
       </ngx-mat-datetime-picker>
-    </mat-form-field>
+    </mat-form-field> -->
   </div>
 
   <div class="dialog-row actions-section">
