--- a/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
@@ -88,14 +88,11 @@
 
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Performed by</mat-label>
-      <input
-        #performedBy
-        type="text"
-        formControlName="performedBy"
-        matInput
-        placeholder="Performed by"
-        maxlength="100"
-      />
+      <mat-select [(value)]="data.performedBy" formControlName="performedBy">
+        <mat-option *ngFor="let initials of bbInitials" [value]="initials">
+          {{ initials }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="
           updateAssignmentForm.get('performedBy')?.invalid &&
