--- a/apps/frontend/src/app/pages/cars/createCarEntryDialog/create-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/createCarEntryDialog/create-car-dialog.component.html
@@ -212,13 +212,11 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>BB Down</mat-label>
-      <input
-        #bbDown
-        type="text"
-        formControlName="bbDown"
-        matInput
-        placeholder="Initials"
-      />
+      <mat-select formControlName="bbDown">
+        <mat-option *ngFor="let initials of bbInitials" [value]="initials">
+          {{ initials }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="
           createCarForm.get('bbDown')?.invalid &&
