--- a/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
@@ -120,13 +120,11 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>BB in LR</mat-label>
-      <input
-        #bbLr
-        type="text"
-        formControlName="bbLr"
-        matInput
-        placeholder="FV"
-      />
+      <mat-select formControlName="bbLR">
+        <mat-option *ngFor="let initials of bbInitials" [value]="initials">
+          {{ initials }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="
           createCheckinForm.get('bbLr')?.invalid &&
@@ -159,8 +157,12 @@
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off" class="input" appearance="fill">
-      <mat-label>BB Out</mat-label>
-      <input type="text" formControlName="bbOut" matInput placeholder="JD" />
+      <mat-label>BB Up</mat-label>
+      <mat-select formControlName="bbOut">
+        <mat-option *ngFor="let initials of bbInitials" [value]="initials">
+          {{ initials }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="
           createCheckinForm.get('bbOut')?.invalid &&
