--- a/apps/frontend/src/app/pages/longterm/updateLongTermDialog/update-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/updateLongTermDialog/update-long-term-dialog.component.html
@@ -126,13 +126,11 @@
       appearance="fill"
     >
       <mat-label class="input-label">BB in LR</mat-label>
-      <input
-        #bbLr
-        type="text"
-        formControlName="bbLr"
-        matInput
-        placeholder="JD"
-      />
+      <mat-select [(value)]="data.bbLr" formControlName="bbLr">
+        <mat-option *ngFor="let initials of bbInitials" [value]="initials">
+          {{ initials }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="
           updateLongTermForm.get('bbLr')?.invalid &&
@@ -170,13 +168,11 @@
       appearance="fill"
     >
       <mat-label class="input-label">BB out</mat-label>
-      <input
-        #bbOut
-        type="text"
-        formControlName="bbOut"
-        matInput
-        placeholder="JD"
-      />
+      <mat-select [(value)]="data.bbOut" formControlName="bbOut">
+        <mat-option *ngFor="let initials of bbInitials" [value]="initials">
+          {{ initials }}
+        </mat-option>
+      </mat-select>
       <mat-error
         *ngIf="
           updateLongTermForm.get('bbOut')?.invalid &&
